--- a/inputitem.css
+++ b/inputitem.css
@@ -28,6 +28,20 @@ nav {
 	padding-bottom: 50px;
 }
 
+#company_name {
+	float: left;
+	margin-left: 30px;
+}
+
+#imageLogo {
+	float: left;
+}
+
+.logo {
+	float: left;
+	width: 100%;
+}
+
 .content {
 	width: 100%;
 	height: 100%;
