--- a/Input screen/inputitem.css
+++ b/Input screen/inputitem.css
@@ -31,6 +31,7 @@ nav {
 #company_name {
 	float: left;
 	margin-left: 30px;
+	position: relative;
 }
 
 #imageLogo {
@@ -46,6 +47,7 @@ nav {
 	width: 100%;
 	height: 100%;
 	margin-left: 60px;
+	position: relative;
 }
 
 #calcBtn {
@@ -117,4 +119,14 @@ nav {
 
 #itemheader {
 	margin-top: -60px;
+}
+
+#addBtn {
+	padding-left: 30px;
+}
+
+body {
+	width: 100%;
+	height: 100%;
+	position: relative;
 }
