--- a/Reports screen/categorized reports.css
+++ b/Reports screen/categorized reports.css
@@ -5,31 +5,60 @@ h3 {
 }
 
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: "verdana";
 }
 
 td {
 	padding: 50px;
 }
 
+ul {
+	list-style-type: none;
+	padding: 0;
+	width: 100%;
+	height: 50px;
+	display: inline-block;
+	border-top: 2.5px solid #626362;
+	border-bottom: 2.5px solid #626362;
+}
+li {
+	display: inline;
+}
+
+li a {
+	margin: 25px;
+	text-decoration: none;
+	color: black;
+	font-weight: bold;
+	color: #363736;
+}
+
+nav {
+	text-align: center;
+	line-height: 3em;
+	padding-bottom: 50px;
+}
+
 .search-container {
 	margin-left: auto;
 }
 
+/*
 .topnav {
 	margin-left: initial;
 	overflow: hidden;
-  	background-color: #333;
+	border-top: 2.5px solid #626362;
+	border-bottom: 2.5px solid #626362;
 }
 
 .topnav a {
-	  float: left;
-	  color: #f2f2f2;
-	  text-align: center;
-	  padding: 14px 16px;
-	  text-decoration: none;
-	  font-size: 17px;
+  	float: left;
+  	color: black;
+  	text-decoration: bold;
+  	text-align: center;
+  	padding: 14px 16px;
+  	text-decoration: none;
+	font-size: 17px;
 }
 
 .topnav a:hover {
@@ -41,7 +70,7 @@ td {
   background-color: #4CAF50;
   color: white;
 }
-
+*/
 #result {
 	position: sticky;
 	top: 0;
@@ -76,4 +105,10 @@ td {
 #printLink, #exportLink {
 	float: right;
 	padding-left: 30px;
+}
+
+.options {
+	width: 100%;
+	height: 50px;
+	background: lightgray;
 }
