--- a/prototypeKPI/KPI.css
+++ b/prototypeKPI/KPI.css
@@ -1,3 +1,34 @@
+body {
+	font-family: "verdana";
+}
+
+ul {
+	list-style-type: none;
+	padding: 0;
+	width: 100%;
+	height: 50px;
+	display: inline-block;
+	border-top: 2.5px solid #626362;
+	border-bottom: 2.5px solid #626362;
+}
+li {
+	display: inline;
+}
+
+li a {
+	margin: 25px;
+	text-decoration: none;
+	color: black;
+	font-weight: bold;
+	color: #363736;
+}
+
+nav {
+	text-align: center;
+	line-height: 3em;
+	padding-bottom: 50px;
+}
+
 .header img {
   float: left;
   width: 50px;
