--- a/Login screen/login.css
+++ b/Login screen/login.css
@@ -1,4 +1,4 @@
-		body {
+body {
 	color: black;
 	background-position: center;
 	background-attachment: fixed;
@@ -62,4 +62,18 @@ h1{
     margin-right: auto;
 	height: 100px;
 	width: 800px;
+}
+
+.loginBox {
+	width: 410px;
+	height: 400px;
+	margin: auto;
+	background: #D4D4D4;
+	border-radius: 30px;
+	margin-top: 100px;
+}
+
+#loginForm {
+	padding-left: 120px;
+	padding-top: 100px;
 }
