--- a/Settings (user) screen/User.css
+++ b/Settings (user) screen/User.css
@@ -1,25 +1,33 @@
+body {
+	font-family: "verdana";
+}
 table {
 	width: 40%;
 	margin-left: 10px;
 }
 ul {
 	list-style-type: none;
-	margin: 0;
 	padding: 0;
-	overflow: hidden;
-	background-color: black;
+	width: 100%;
+	height: 50px;
+	display: inline-block;
+	border-top: 2.5px solid #626362;
+	border-bottom: 2.5px solid #626362;
+}
+li {
+	display: inline;
 }
 li a{
-	float: left;
-	display: block;
-	padding: 18px 30px;
-	color: white;
-	text-align: center;
+	margin: 25px;
 	text-decoration: none;
-	
+	color: black;
+	font-weight: bold;
+	color: #363736;
 }
-li a:hover {
-	background-color: gray;
+nav {
+	text-align: center;
+	line-height: 3em;
+	padding-bottom: 50px;
 }
 #search {
 	margin-top: 10px;
@@ -27,8 +35,11 @@ li a:hover {
 }
 #add {
 	position: absolute;
-	right: 25%;
-	top: 10%;
+	left: 30%;
+}
+#edit {
+	position: absolute;
+	left: 50%;
 }
 #logout {
 	float: right;
@@ -38,4 +49,16 @@ li a:hover {
 
 #userTable tr td {
 	padding-top: 70px;
+}
+#company_name {
+	float: left;
+	margin-left: 30px;
+	position: relative;
+}
+#imageLogo {
+	float: left;
+}
+.logo {
+	float: left;
+	width: 100%;
 }
